--- a/MbMB/requirements.txt
+++ b/MbMB/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.3.4
 boto3==1.17.81
 botocore==1.20.81
+
+
 Django==3.2
-django-filter==2.4.0
 django-storages==1.11.1
 djangorestframework==3.12.4
+django-filter~=1.1
+
 djangorestframework-filters==0.11.1
 djangorestframework-simplejwt==4.6.0
 gunicorn==20.1.0
